# clustering

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: packaging.yml
notebooks/: basic_fsm.ipynb  fellegi_sunter.ipynb  learning_distances.ipynb  logistic_regression.ipynb  logistic_regression_patterns.ipynb  naive_bayes.ipynb
src/entity_matchers/ppjoin/: __init__.py  _algo.py
src/matchescu/clustering/: __init__.py  _base.py  _cc.py  _center.py  _corr.py  _ecp.py  _gacl.py  _hac.py  _leiden.py  _louvain.py  _mc.py  _mcl.py  _spectral.py  _tc.py  _wcc.py
src/matchescu/entity_matchers/: _ppjoin_adapter.py
src/matchescu/entity_matchers/attribute_matching/: __init__.py  _match.py  _typing.py
src/matchescu/entity_matchers/common/: __init__.py  _comparison.py
src/matchescu/entity_matchers/my_ppjoin/: _algo.py
src/matchescu/entity_matchers/similarity/: __init__.py  _string.py  (+1 more)
src/matchescu/entity_resolution/: _ppjoin_adapter.py
src/matchescu/matching/: __init__.py
tests/: conftest.py  testutil.py
tests/data/: beer-all-refs.csv  beer-rev-digraph.gml  cora_duplicates.csv  sample.csv  subsample_a.csv  subset_a.csv  subset_b.csv  subtable_a.csv  subtable_b.csv
tests/data/abt-buy/: all-refs.csv  ground-truth.csv
tests/data/amazon-google/: all-refs.csv  ground-truth.csv
tests/data/beer/: fwd-digraph.gml  ground-truth.csv
tests/data/cora/: cora.csv
tests/data/dblp-scholar/: all-refs.csv  ground-truth.csv
tests/entity_matchers/ppjoin/: test_algorithm.py
tests/entity_matchers/similarity/: test_string.py  test_value_similarity_match.py
tests/entity_resolution/ppjoin/: test_algorithm.py
tests/matchescu/clustering/: conftest.py  test_center.py  test_corr.py  test_gacl.py  test_hac.py  test_leiden.py  test_louvain.py  test_mcl.py  test_partitioning.py  test_spectral.py  test_wcc.py
tests/matchescu/common/: test_cc.py  test_center.py  test_corr.py  test_gacl.py  test_hac.py  test_leiden.py  test_louvain.py  test_mcl.py  test_partitioning.py  test_tc.py
tests/matching/distance/: test_bilenko.py  test_ristad_yianilos.py
tests/matching/ppjoin/: test_algorithm.py
tests/matching/similarity/: test_numeric.py  test_value_similarity_match.py
(+23 files in other folders)
