[tool.poetry]
name = "matchescu-matching"
version = "0.1.0"
description = ""
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2023.7.22"
pandas = "^2.2.3"
ppjoin = {git = "https://github.com/usc-isi-i2/ppjoin.git", rev = "0.2.0"}
numpy = "^2.1.1"
matchescu-base = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = {version = "^24.8.0", extras = ["jupyter"]}


[tool.poetry.group.development.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
