[tool.poetry]
name = "matchescu-clustering"
version = "0.12.0"
description = "Clustering routines and data structures for entity resolution"
authors = ["Andrei Olar <andrei.olar@ubbcluj.ro>"]
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.dependencies]
python = "!=3.14.1,^3.13"
matchescu-base = "^0.24.0"
numpy = "^2.4.2"
markov-clustering = "^0.0.6.dev0"
scikit-learn = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
ruff = "^0.11.2"
scipy-stubs = "^1.17.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
